--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link >
+        <link rel="stylesheet" href="style.css">
     <title>Currency Converter</title>
     </head>
     <body>
